@@ -1383,6 +1383,7 @@ Joerg Weber
    * Split locate_motion into separate 'mode' and 'style' option to allow all
      possible combinations.
    * Gapless_event mode.
+   * Limit detection rate to 3fps at framerates above 5fps, to reduce CPU load.
    
 Dirk Wesenberg
    * Track pan/tilt support for uvcvideo ( Michal Licko ,Dirk Wesenberg and Angel Carpintero )
