@@ -159,7 +159,7 @@ void alg_locate_center_size(struct images *imgs, int width, int height, struct c
 
 
 /* draw a box around the movement */
-void alg_draw_location(struct coord *cent, struct images *imgs, int width, unsigned char *new, int style, int mode)
+void alg_draw_location(struct coord *cent, struct images *imgs, int width, unsigned char *new, int style, int mode, int process_thisframe)
 {
     unsigned char *out = imgs->out;
     int x, y;
@@ -167,7 +167,7 @@ void alg_draw_location(struct coord *cent, struct images *imgs, int width, unsig
     out = imgs->out;
 
     /* debug image always gets a 'normal' box */
-    if (mode == LOCATE_BOTH) {
+    if ((mode == LOCATE_BOTH) && process_thisframe) {
         int width_miny = width * cent->miny;
         int width_maxy = width * cent->maxy;
 
@@ -223,7 +223,7 @@ void alg_draw_location(struct coord *cent, struct images *imgs, int width, unsig
 
 
 /* draw a RED box around the movement */
-void alg_draw_red_location(struct coord *cent, struct images *imgs, int width, unsigned char *new, int style, int mode)
+void alg_draw_red_location(struct coord *cent, struct images *imgs, int width, unsigned char *new, int style, int mode, int process_thisframe)
 {
     unsigned char *out = imgs->out;
     unsigned char *new_u, *new_v;
@@ -238,7 +238,7 @@ void alg_draw_red_location(struct coord *cent, struct images *imgs, int width, u
     new_v = new + v;
 
     /* debug image always gets a 'normal' box */
-    if (mode == LOCATE_BOTH) {
+    if ((mode == LOCATE_BOTH) && process_thisframe) {
         int width_miny = width * cent->miny;
         int width_maxy = width * cent->maxy;
 
